--- a/client/index.html
+++ b/client/index.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 	<h1>Input string to sortinate!</h1>
-	<script src="app.js"></script>
+	<script src="./app.js"></script>
 	<div class="container">
 		<div class="input">
-			<form class="">
-				
-			</form>
+			<form class="sortinate" action="/sortinate">
+				Enter string here: <input type="text" name="unsorted">
+				<input type="button" value="Submit">
+			</form>		
 		</div>
 		<div class="results">
 			<table>
