Create ajax call for form submission

--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,10 @@
 	<script src="./app.js"></script>
 	<div class="container">
 		<div class="input">
-			<form class="sortinate" action="/sortinate">
+			<form class="sortinate" action="/sortinate" method="post">
 				Enter string here: <input type="text" name="unsorted">
 				<input type="button" value="Submit">
-			</form>		
+			</form>	
 		</div>
 		<div class="results">
 			<table>
