--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,20 @@
 	<link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-	<h1>Input string to sortinate!</h1>
-<!-- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 	<script src="./app.js"></script>
 	<div class="container">
+		<h1>Input string to sortinate!</h1>
 		<div class="input">
 			<form class="sortinate" onSubmit="submitString(); return false;" >
 				Enter string here: <input type="text" class="unsorted">
 				<input type="submit" value="Submit">
 			</form>	
 		</div>
-		<div class="results">
-			<table>
+		<div>
+			<table id="submissions">
 				<thead>
+					<th>Input</th>
+					<th>Output</th>
 				</thead>
 				<tbody>
 				</tbody>
